fixing style for overflow, overlapping the view height and some more

--- a/src/_css/contact.css
+++ b/src/_css/contact.css
@@ -140,10 +140,9 @@
 
 .contact-location-container {
     display: flex;
-    flex-direction: column;
+	align-items: center;
     width: 50%;
     height: inherit;
-    /* background-color: red; */
 }
 
 
