--- a/src/_css/home.css
+++ b/src/_css/home.css
@@ -3,6 +3,7 @@
     display: flex;
     width: 100%;
     height: inherit;
+    overflow: hidden;
 }
 
 .intro-wrapper {
@@ -14,6 +15,7 @@
     width: inherit;
     height: inherit;
     padding-left: 5%;
+    /* background-color: #fff; */
 }
 
 .intro-wrapper div:nth-child(1) span {
